# django-sns-view

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml  python-package.yml
django_sns_view/: __init__.py  types.py  utils.py  views.py
django_sns_view/tests/: __init__.py  helpers.py  settings.py  test_settings.py  test_utils.py  test_views.py  utils.py  views.py
django_sns_view/tests/test_data/: example.pem  notifications.py
